// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> renders Loader 1`] = `
<Loader__Container
  inline={false}
>
  <Component
    color="#333333"
    size={40}
  />
</Loader__Container>
`;

exports[`<Loader /> renders Loader with a color and a small size 1`] = `
<Loader__Container
  inline={false}
>
  <Component
    color="white"
    size={20}
  />
</Loader__Container>
`;

exports[`<Loader /> renders Loader with a white color 1`] = `
<Loader__Container
  inline={false}
>
  <Component
    color="white"
    size={40}
  />
</Loader__Container>
`;

exports[`<Loader /> renders LoaderContainer 1`] = `
.c0 {
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 50px;
  padding-bottom: 30px;
  width: 100%;
}

.c0 div {
  margin: auto;
}

<div
  className="c0"
/>
`;

exports[`<Loader /> renders an inline Loader 1`] = `
<Loader__Container
  inline={true}
>
  <Component
    color="#333333"
    size={40}
  />
</Loader__Container>
`;

exports[`<Loader /> renders nothing 1`] = `""`;
